--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -46,6 +46,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
                             <li><a class="dropdown-item" href="/manager/category">카테고리 및 상품 관리</a></li>
                             <li><a class="dropdown-item" href="/manager/order">주문 관리</a></li>
+                            <li><a class="dropdown-item" href="/manager/deliver">배송 관리</a></li>
                             <li><a class="dropdown-item" href="/manager/user">사용자 관리</a></li>
                             <li><a class="dropdown-item" href="/manager/fileDownload">파일 업로드/다운로드 기록</a></li>
                             <li><a class="dropdown-item" href="/manager/postType">게시판 관리</a></li>
