--- a/src/main/resources/templates/user/order.html
+++ b/src/main/resources/templates/user/order.html
@@ -5,6 +5,16 @@
 
 <th:block layout:fragment="head">
     <title>HONG SHOP</title>
+    <style>
+        th, td {
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        tr {
+            text-align: center;
+        }
+    </style>
 </th:block>
 
 <th:block layout:fragment="content">
@@ -18,7 +28,65 @@
             </div>
         </div>
         <div class="card-body">
-
+            <table class="table table-bordered" id="cart-table">
+                <thead>
+                    <tr>
+                        <th style="width: 5%" rowspan="2">번호</th>
+                        <th style="width: 10%" rowspan="2">주문상태</th>
+                        <th style="width: 10%" rowspan="2">주문날짜</th>
+                        <th style="width: 10%" COLSPAN="3">주문상세정보</th>
+                        <th style="width: 10%" rowspan="2">배송상태</th>
+                        <th style="width: 10%" COLSPAN="3">주소</th>
+                        <th style="width: 10%" rowspan="2">배송지 변경하기</th>
+                    </tr>
+                    <tr>
+                        <th>상품명</th>
+                        <th>주문개수</th>
+                        <th>총가격</th>
+                        <th>시/도</th>
+                        <th>시군구/읍면동</th>
+                        <th>우편번호</th>
+                    </tr>
+                </thead>
+                <tbody>
+                <th:block th:if="${orders.size() == 0}">
+                    <tr>
+                        <td colspan="11">주문 및 배송 정보가 비어있습니다.</td>
+                    </tr>
+                </th:block>
+                <th:block th:unless="${orders.size() == 0}">
+                    <th:block  th:each="order, orderStat : ${orders}">
+                        <tr>
+                            <td th:text="${orderStat.index + 1}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td th:text="${order.orderStatus}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td th:text="${#strings.substring(order.orderDate, 0, 10)}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td th:text="${order.orderDetails.get(0).productName}" style="width: 10%"></td>
+                            <td th:text="|${order.orderDetails.get(0).orderCnt} 개|" style="width: 10%"></td>
+                            <td th:text="|${#numbers.formatInteger(order.orderDetails.get(0).orderPrice, 0, 'COMMA')} 원|" style="width: 10%"></td>
+                            <td th:text="${order.deliverStatus}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td th:text="${order.address.city}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td th:text="${order.address.street}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td th:text="${order.address.zipcode}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td style="width: 10%" th:rowspan="${order.orderDetails.size()}">
+                                <button type="button" class="btn btn-outline-primary chg-address" th:data-deliver="${order.deliverId}" th:data-city="${order.address.city}"
+                                        th:data-street="${order.address.street}" th:data-zipcode="${order.address.zipcode}">변경</button>
+                            </td>
+                        </tr>
+                        <th:block th:if="${order.orderDetails.size() > 1}">
+                            <th:block th:each="detail, detailStat : ${order.orderDetails}">
+                                <th:block th:unless="${detailStat.first}">
+                                    <tr>
+                                        <td th:text="${detail.productName}" style="width: 10%"></td>
+                                        <td th:text="|${detail.orderCnt} 개|" style="width: 10%"></td>
+                                        <td th:text="|${#numbers.formatInteger(detail.orderPrice, 0, 'COMMA')} 원|" style="width: 10%"></td>
+                                    </tr>
+                                </th:block>
+                            </th:block>
+                        </th:block>
+                    </th:block>
+                </th:block>
+                </tbody>
+            </table>
         </div>
     </div>
 </th:block>
@@ -26,6 +94,16 @@
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
+        const orderAndDeliver = /*[[${orders}]]*/ [];
+        console.log("orderAndDeliver : ", orderAndDeliver)
+
+        $(".chg-address").on("click", function(e) {
+            const deliverId = $(this).attr("data-deliver")
+            const city = $(this).attr("data-city")
+            const street = $(this).attr("data-street")
+            const zipcode = $(this).attr("data-zipcode")
+            console.log(`${deliverId} -> ${city}. ${street}. ${zipcode}`)
+        })
     </script>
 </th:block>
 
