--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <div class="mt-3">
         <div class="text-center">
             <h3><b>Hong Shop</b></h3>
-            <span>Hong Shop 옷 가게 온라인 쇼핑몰입니다.</span>
+            <span>Hong Shop 온라인 쇼핑몰입니다.</span>
         </div>
         <div class="text-center" style="margin-top: 10px">
             <button type="button" class="btn btn-outline-info" id="show-new-product">최신상품보러가기</button>
