commit 109 - 주문 및 배송정보 화면에서 배송상태가 AWAIT일 경우, 배송지 변경 구현

--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -117,7 +117,7 @@
         <!-- s: Product Purchase Modal -->
         <form id="product-purchase-form" class="needs-validation" novalidate>
             <div class="modal fade" id="product-purchase-modal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
 
                         <!-- Modal Header -->
