--- a/src/main/resources/templates/cart/index.html
+++ b/src/main/resources/templates/cart/index.html
@@ -12,7 +12,7 @@
         <div class="card-header" style="margin-bottom: 10px">
             <div class="card-text d-flex justify-content-between">
                 <div class="text-start">
-                    <h3>🛒 장바구니 🛒</h3>
+                    <h3>장바구니</h3>
                 </div>
                 <div class="text-end">
                     <button type="button" class="btn btn-success" id="chk-all">✔ 전체 선택</button>
